crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/auto only - hit on non-inferred file change.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run auto-only
$ vtt print-file src/main.ts
export const main = 'initial';
> vtt replace-file-content src/utils.ts initial modified

> vt run auto-only
$ vtt print-file src/main.ts ◉ cache hit, replaying
export const main = 'initial';

---
vt run: cache hit, <duration> saved.
