crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/auto only - miss on inferred file change.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run auto-only
$ print-file src/main.ts
export const main = 'initial';
> replace-file-content src/main.ts initial modified

> vp run auto-only
$ print-file src/main.ts ✗ cache miss: 'src/main.ts' modified, executing
export const main = 'modified';
