crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/empty input - hit despite file changes.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run empty-inputs
$ vtt print-file src/main.ts
export const main = 'initial';
> vtt replace-file-content src/main.ts initial modified

> vt run empty-inputs
$ vtt print-file src/main.ts ◉ cache hit, replaying
export const main = 'initial';

---
vt run: cache hit.
