crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/empty input - miss on command change.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run empty-inputs
$ vtt print-file src/main.ts
export const main = 'initial';
> vtt json-edit vite-task.json "_.tasks['empty-inputs'].command = 'vtt print-file src/utils.ts'"

> vt run empty-inputs
$ vtt print-file src/utils.ts ○ cache miss: args changed, executing
export const utils = 'initial';
