crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/folder input - hit despite file changes and folder deletion.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run folder-input
$ vtt print-file src/main.ts
export const main = 'initial';
> vtt replace-file-content src/main.ts initial modified

> vt run folder-input
$ vtt print-file src/main.ts ◉ cache hit, replaying
export const main = 'initial';

---
vt run: cache hit, <duration> saved.
> rm -rf src

> vt run folder-input
$ vtt print-file src/main.ts ◉ cache hit, replaying
export const main = 'initial';

---
vt run: cache hit, <duration> saved.
