crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/folder slash input - hit on file outside directory.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run folder-slash-input
$ vtt print-file src/main.ts
export const main = 'initial';
> vtt replace-file-content test/main.test.ts outside modified

> vt run folder-slash-input
$ vtt print-file src/main.ts ◉ cache hit, replaying
export const main = 'initial';

---
vt run: cache hit, <duration> saved.
