crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/fspy env - not set when auto inference disabled.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run check-fspy-env-without-auto
$ print-env FSPY
(undefined)
